<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OmiljeniFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelOmiljeniDorucak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_dorucak"
                android:textColor="#040404"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/listOmiljeniDorucak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelOmiljeniRucak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_rucak"
                android:textColor="#040404"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/listOmiljeniRucak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelOmiljeniVecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_vecera"
                android:textColor="#040404"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/listOmiljeniVecera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelOmiljeniUzina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_uzina"
                android:textColor="#040404"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/listOmiljeniUzina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/labelOmiljeniNapici"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_napici"
                android:textColor="#040404"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/listOmiljeniNapici"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>